--- a/EasyLearn/EasyLearn.csproj
+++ b/EasyLearn/EasyLearn.csproj
@@ -5,12 +5,19 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <PackageIcon>easy-learn.png</PackageIcon>
+    <PackageIcon>icons8-easy-70.png</PackageIcon>
     <ApplicationIcon>apple_fruit_food_icon_218349.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="apple_fruit_food_icon_218349.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\EasyLearn\img\icons8-easy-70.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
